<resources>
    <string name="app_name">ZemogaApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_posts_favorite_item">Favorite Item</string>
    <string name="desc_item_post_item_no_viewed">Item no Viewed</string>
    <string name="post_detail_title">Description</string>
    <string name="post_detail_user">User</string>
    <string name="post_detail_user_name">Name: %1$s</string>
    <string name="post_detail_user_email">Email: %1$s</string>
    <string name="post_detail_user_phone">Phone: %1$s</string>
    <string name="post_detail_user_website">Website: %1$s</string>
    <string name="post_detail_comments">COMMENTS</string>
    <string name="detail_menu_favorite">Favorite</string>
    <string name="list_menu_refresh">Refresh</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_delete_cancel">Cancel</string>
</resources>
